--- a/app/index.html
+++ b/app/index.html
@@ -45,7 +45,7 @@
 
       <div class="jumbotron">
         <h1 class="display-3">'Allo, 'Allo!</h1>
-        <p class="lead">Always a pleasure scaffolding your apps.</p>
+        <p class="lead">Always a pleasure scaffolding your apps.Test App, Hello world !</p>
         <p><a class="btn btn-lg btn-success" href="#">Splendid!</a></p>
       </div>
 
