refactor: delete nunjuck templates reference in index.html

--- a/app/index.html
+++ b/app/index.html
@@ -1,6 +1,31 @@
-{% extends 'templates/base.html' %}
+<!doctype html>
+<html class="no-js" lang="">
+  <head>
+    <meta charset="utf-8">
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>yo webapp</title>
 
-{% block content %}
+    <link rel="apple-touch-icon" href="apple-touch-icon.png">
+    <!-- Place favicon.ico in the root directory -->
+
+    <!-- build:css styles/vendor.css -->
+    <!-- bower:css -->
+    <!-- endbower -->
+    <!-- endbuild -->
+
+    <!-- build:css styles/main.css -->
+    <link rel="stylesheet" href="styles/main.css">
+    <!-- endbuild -->
+    
+    <!-- build:js scripts/vendor/modernizr.js -->
+    <script src="/bower_components/modernizr/modernizr.js"></script>
+    <!-- endbuild -->
+  </head>
+  <body>
+    <!--[if IE]>
+      <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+    <![endif]-->
 
 
     <div class="container">
@@ -20,13 +45,8 @@
       </div>
 
       <div class="jumbotron">
-<<<<<<< HEAD
-        <h1 class="display-3">'Allo, 'Allo! This is a test, did Nunjucks really work ?</h1>
-        <p class="lead">Always a pleasure scaffolding your apps.</p>
-=======
         <h1 class="display-3">'Allo, 'Allo!</h1>
         <p class="lead">Always a pleasure scaffolding your apps.Test App, Hello world !</p>
->>>>>>> initial_html_structure
         <p><a class="btn btn-lg btn-success" href="#">Splendid!</a></p>
       </div>
 
@@ -88,4 +108,5 @@
     <script src="scripts/main.js"></script>
     <!-- endbuild -->
 
- {% endblock %}
+    </body>
+</html>
